gap-filler fix
gap-filler between menu button and it's dropdown

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,16 @@ input[type="radio"] {
   outline: none;
 }
 
+.gap-filler::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -5px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+}
+
 .main-header {
   position: relative;
 }
@@ -127,12 +137,6 @@ input[type="radio"] {
   box-shadow: inset 0 2px 1px 0 #696969;
 }
 
-.main-header-navigation-menu .catalog:hover ~ .main-header-navigation-menu-submenu,
-.main-header-navigation-menu-submenu:hover {
-  visibility: visible;
-  transform: scaleY(1);
-}
-
 .main-header-navigation-menu-submenu {
   visibility: hidden;
   position: absolute;
@@ -144,11 +148,16 @@ input[type="radio"] {
   width: 143px;
   background-color: #f8f7f4;
   border-radius: 5px;
-  overflow: hidden;
   transition: 0.3s;
   transform: scaleY(0);
   transform-origin: top;
   box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.4);
+}
+
+.main-header-navigation-menu .catalog:hover ~ .main-header-navigation-menu-submenu,
+.main-header-navigation-menu-submenu:hover {
+  visibility: visible;
+  transform: scaleY(1);
 }
 
 .main-header-navigation-menu-submenu > li > a {
@@ -171,6 +180,14 @@ input[type="radio"] {
 
 .main-header-navigation-menu-submenu > li > a:hover {
   background-color: #fbded7;
+}
+
+.main-header-navigation-menu-submenu > li:first-child > a:hover {
+  border-radius: 5px 5px 0 0;
+}
+
+.main-header-navigation-menu-submenu > li:last-child > a:hover {
+  border-radius: 0 0 5px 5px;
 }
 
 .main-header-navigation-menu-submenu > li > a:active {
